changes in package.json file

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://ShwetaMane13.github.io/brickfolio-website",
-  "name": "brickfolio-assignment",
+  "name": "brickfolio-website",
   "private": true,
   "version": "0.0.0",
   "type": "module",
